--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,25 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #282c34;
+  color: white;
+}
+
+.App {
+  display: flex;
   padding: 2rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
   text-align: center;
 }
 
