--- a/src/App.css
+++ b/src/App.css
@@ -294,3 +294,8 @@ input[type="range"]::-webkit-slider-thumb:hover {
 }
 
 
+.no-transition .MuiSlider-thumb,
+.no-transition .MuiSlider-track,
+.no-transition .MuiSlider-rail {
+  transition: none !important;
+}
