--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 #root {
-  max-width: 1280px;
+  max-width: 100vw;
   margin: 0;
   padding: 0;
   text-align: center;
@@ -117,11 +117,15 @@ body {
 }
 
 .app-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 90vw;
   max-width: 1400px;
   margin: 20px auto;
   padding: 30px;
-  background: rgba(0, 0, 0, 0.7);
+  /* background: rgba(0, 0, 0, 0.7); */
   border-radius: 16px;
   backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -129,17 +133,20 @@ body {
 
 .content-overlay {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0%;
+  left: 0%;
+  height: 100vh;
+  width: 100vw;
+  /* transform: translate(-50%, -50%); */
   z-index: 1000;
   text-align: center;
   background: rgba(0, 0, 0, 0.2);
-  padding: 2rem;
+  /* padding: 2rem; */
   border-radius: 16px;
   backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.1);
 }
+
 
 .text-container {
   z-index: 100;
@@ -298,4 +305,19 @@ input[type="range"]::-webkit-slider-thumb:hover {
 .no-transition .MuiSlider-track,
 .no-transition .MuiSlider-rail {
   transition: none !important;
+}
+
+.navbar {
+  position: fixed;
+  padding: 2rem;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
+.main-page-container {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
